| Summary: | ASTERISK-26976: libsrtp-2.x.x support | ||||||
| Reporter: | Alex (metsys) | Labels: | |||||
| Date Opened: | 2017-05-02 12:14:04 | Date Closed: | 2017-07-06 07:08:54 | ||||
| Priority: | Minor | Regression? | |||||
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk | ||||
| Versions: | 13.15.0 | Frequency of Occurrence | |||||
| Related Issues: |
| ||||||
| Environment: | https://github.com/cisco/libsrtp centos 6.9 x64 | Attachments: | |||||
| Description: | can't compile asteriks 13.15.0 (guess higher versions also ) due to absence of support libsrtp v2.x.x
got error: checking for mandatory modules: CRYPTO SRTP OPENSSL... fail configure: *** configure: *** The SRTP installation appears to be missing or broken. configure: *** Either correct the installation, or run configure configure: *** including --without-srtp. using libbsrtp v1.5.x - all correct. | ||||||
| Comments: | By: Friendly Automation (friendly-automation) 2017-06-06 05:02:31.665-0500 Change 5722 merged by Joshua Colp: res_srtp: Add support for libsrtp2 [https://gerrit.asterisk.org/5722|https://gerrit.asterisk.org/5722] By: Friendly Automation (friendly-automation) 2017-06-06 05:02:43.820-0500 Change 5723 merged by Joshua Colp: res_srtp: Add support for libsrtp2 [https://gerrit.asterisk.org/5723|https://gerrit.asterisk.org/5723] By: Friendly Automation (friendly-automation) 2017-06-06 05:02:53.016-0500 Change 5724 merged by Joshua Colp: res_srtp: Add support for libsrtp2 [https://gerrit.asterisk.org/5724|https://gerrit.asterisk.org/5724] By: Friendly Automation (friendly-automation) 2018-03-14 06:35:50.889-0500 Change 8503 merged by Joshua Colp: res_srtp: Add support for libsrtp2.x on openSUSE. [https://gerrit.asterisk.org/8503|https://gerrit.asterisk.org/8503] | ||||||